--- a/notebooks/retrieval.ipynb
+++ b/notebooks/retrieval.ipynb
@@ -1,15 +1,8 @@
 {
     "cells": [
         {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Database Create"
-            ]
-        },
-        {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
@@ -52,7 +45,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -63,11 +56,7 @@
                 "\n",
                 "def get_embedding(text, model=\"text-embedding-3-small\"):\n",
                 "    text = text.replace(\"\\n\", \" \")\n",
-                "    return client.embeddings.create(input = [text], model=model).data[0].embedding\n",
-                "\n",
-                "\n",
-                "def embed_texts(texts, model=\"text-embedding-3-small\"):\n",
-                "    return [get_embedding(t, model) for t in texts]"
+                "    return client.embeddings.create(input = [text], model=model).data[0].embedding"
             ]
         },
         {
@@ -261,298 +250,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## Full-text search"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 40,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "def create_text_index(tx):\n",
-                "    tx.run(\"\"\"\n",
-                "        CREATE FULLTEXT INDEX event_text IF NOT EXISTS\n",
-                "        FOR (e:Event)\n",
-                "        ON EACH [e.text]\n",
-                "    \"\"\")\n",
-                "with driver.session() as session:\n",
-                "    session.execute_write(create_text_index)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 41,
-            "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Found 107030 events without embeddings\n",
-                        "Added 500 / 107030\n",
-                        "Added 1000 / 107030\n",
-                        "Added 1500 / 107030\n",
-                        "Added 2000 / 107030\n",
-                        "Added 2500 / 107030\n",
-                        "Added 3000 / 107030\n",
-                        "Added 3500 / 107030\n",
-                        "Added 4000 / 107030\n",
-                        "Added 4500 / 107030\n",
-                        "Added 5000 / 107030\n",
-                        "Added 5500 / 107030\n",
-                        "Added 6000 / 107030\n",
-                        "Added 6500 / 107030\n",
-                        "Added 7000 / 107030\n",
-                        "Added 7500 / 107030\n",
-                        "Added 8000 / 107030\n",
-                        "Added 8500 / 107030\n",
-                        "Added 9000 / 107030\n",
-                        "Added 9500 / 107030\n",
-                        "Added 10000 / 107030\n",
-                        "Added 10500 / 107030\n",
-                        "Added 11000 / 107030\n",
-                        "Added 11500 / 107030\n",
-                        "Added 12000 / 107030\n",
-                        "Added 12500 / 107030\n",
-                        "Added 13000 / 107030\n",
-                        "Added 13500 / 107030\n",
-                        "Added 14000 / 107030\n",
-                        "Added 14500 / 107030\n",
-                        "Added 15000 / 107030\n",
-                        "Added 15500 / 107030\n",
-                        "Added 16000 / 107030\n",
-                        "Added 16500 / 107030\n",
-                        "Added 17000 / 107030\n",
-                        "Added 17500 / 107030\n",
-                        "Added 18000 / 107030\n",
-                        "Added 18500 / 107030\n",
-                        "Added 19000 / 107030\n",
-                        "Added 19500 / 107030\n",
-                        "Added 20000 / 107030\n",
-                        "Added 20500 / 107030\n",
-                        "Added 21000 / 107030\n",
-                        "Added 21500 / 107030\n",
-                        "Added 22000 / 107030\n",
-                        "Added 22500 / 107030\n",
-                        "Added 23000 / 107030\n",
-                        "Added 23500 / 107030\n",
-                        "Added 24000 / 107030\n",
-                        "Added 24500 / 107030\n",
-                        "Added 25000 / 107030\n",
-                        "Added 25500 / 107030\n",
-                        "Added 26000 / 107030\n",
-                        "Added 26500 / 107030\n",
-                        "Added 27000 / 107030\n",
-                        "Added 27500 / 107030\n",
-                        "Added 28000 / 107030\n",
-                        "Added 28500 / 107030\n",
-                        "Added 29000 / 107030\n",
-                        "Added 29500 / 107030\n",
-                        "Added 30000 / 107030\n",
-                        "Added 30500 / 107030\n",
-                        "Added 31000 / 107030\n",
-                        "Added 31500 / 107030\n",
-                        "Added 32000 / 107030\n",
-                        "Added 32500 / 107030\n",
-                        "Added 33000 / 107030\n",
-                        "Added 33500 / 107030\n",
-                        "Added 34000 / 107030\n",
-                        "Added 34500 / 107030\n",
-                        "Added 35000 / 107030\n",
-                        "Added 35500 / 107030\n",
-                        "Added 36000 / 107030\n",
-                        "Added 36500 / 107030\n",
-                        "Added 37000 / 107030\n",
-                        "Added 37500 / 107030\n",
-                        "Added 38000 / 107030\n",
-                        "Added 38500 / 107030\n",
-                        "Added 39000 / 107030\n",
-                        "Added 39500 / 107030\n",
-                        "Added 40000 / 107030\n",
-                        "Added 40500 / 107030\n",
-                        "Added 41000 / 107030\n",
-                        "Added 41500 / 107030\n",
-                        "Added 42000 / 107030\n",
-                        "Added 42500 / 107030\n",
-                        "Added 43000 / 107030\n",
-                        "Added 43500 / 107030\n",
-                        "Added 44000 / 107030\n",
-                        "Added 44500 / 107030\n",
-                        "Added 45000 / 107030\n",
-                        "Added 45500 / 107030\n",
-                        "Added 46000 / 107030\n",
-                        "Added 46500 / 107030\n",
-                        "Added 47000 / 107030\n",
-                        "Added 47500 / 107030\n",
-                        "Added 48000 / 107030\n",
-                        "Added 48500 / 107030\n",
-                        "Added 49000 / 107030\n",
-                        "Added 49500 / 107030\n",
-                        "Added 50000 / 107030\n",
-                        "Added 50500 / 107030\n",
-                        "Added 51000 / 107030\n",
-                        "Added 51500 / 107030\n",
-                        "Added 52000 / 107030\n",
-                        "Added 52500 / 107030\n",
-                        "Added 53000 / 107030\n",
-                        "Added 53500 / 107030\n",
-                        "Added 54000 / 107030\n",
-                        "Added 54500 / 107030\n",
-                        "Added 55000 / 107030\n",
-                        "Added 55500 / 107030\n",
-                        "Added 56000 / 107030\n",
-                        "Added 56500 / 107030\n",
-                        "Added 57000 / 107030\n",
-                        "Added 57500 / 107030\n",
-                        "Added 58000 / 107030\n",
-                        "Added 58500 / 107030\n",
-                        "Added 59000 / 107030\n",
-                        "Added 59500 / 107030\n",
-                        "Added 60000 / 107030\n",
-                        "Added 60500 / 107030\n",
-                        "Added 61000 / 107030\n",
-                        "Added 61500 / 107030\n",
-                        "Added 62000 / 107030\n",
-                        "Added 62500 / 107030\n",
-                        "Added 63000 / 107030\n",
-                        "Added 63500 / 107030\n",
-                        "Added 64000 / 107030\n",
-                        "Added 64500 / 107030\n",
-                        "Added 65000 / 107030\n",
-                        "Added 65500 / 107030\n",
-                        "Added 66000 / 107030\n",
-                        "Added 66500 / 107030\n",
-                        "Added 67000 / 107030\n",
-                        "Added 67500 / 107030\n",
-                        "Added 68000 / 107030\n",
-                        "Added 68500 / 107030\n",
-                        "Added 69000 / 107030\n",
-                        "Added 69500 / 107030\n",
-                        "Added 70000 / 107030\n",
-                        "Added 70500 / 107030\n",
-                        "Added 71000 / 107030\n",
-                        "Added 71500 / 107030\n",
-                        "Added 72000 / 107030\n",
-                        "Added 72500 / 107030\n",
-                        "Added 73000 / 107030\n",
-                        "Added 73500 / 107030\n",
-                        "Added 74000 / 107030\n",
-                        "Added 74500 / 107030\n",
-                        "Added 75000 / 107030\n",
-                        "Added 75500 / 107030\n",
-                        "Added 76000 / 107030\n",
-                        "Added 76500 / 107030\n",
-                        "Added 77000 / 107030\n",
-                        "Added 77500 / 107030\n",
-                        "Added 78000 / 107030\n",
-                        "Added 78500 / 107030\n",
-                        "Added 79000 / 107030\n",
-                        "Added 79500 / 107030\n",
-                        "Added 80000 / 107030\n",
-                        "Added 80500 / 107030\n",
-                        "Added 81000 / 107030\n",
-                        "Added 81500 / 107030\n",
-                        "Added 82000 / 107030\n",
-                        "Added 82500 / 107030\n",
-                        "Added 83000 / 107030\n",
-                        "Added 83500 / 107030\n",
-                        "Added 84000 / 107030\n",
-                        "Added 84500 / 107030\n",
-                        "Added 85000 / 107030\n",
-                        "Added 85500 / 107030\n",
-                        "Added 86000 / 107030\n",
-                        "Added 86500 / 107030\n",
-                        "Added 87000 / 107030\n",
-                        "Added 87500 / 107030\n",
-                        "Added 88000 / 107030\n",
-                        "Added 88500 / 107030\n",
-                        "Added 89000 / 107030\n",
-                        "Added 89500 / 107030\n",
-                        "Added 90000 / 107030\n",
-                        "Added 90500 / 107030\n",
-                        "Added 91000 / 107030\n",
-                        "Added 91500 / 107030\n",
-                        "Added 92000 / 107030\n",
-                        "Added 92500 / 107030\n",
-                        "Added 93000 / 107030\n",
-                        "Added 93500 / 107030\n",
-                        "Added 94000 / 107030\n",
-                        "Added 94500 / 107030\n",
-                        "Added 95000 / 107030\n",
-                        "Added 95500 / 107030\n",
-                        "Added 96000 / 107030\n",
-                        "Added 96500 / 107030\n",
-                        "Added 97000 / 107030\n",
-                        "Added 97500 / 107030\n",
-                        "Added 98000 / 107030\n",
-                        "Added 98500 / 107030\n",
-                        "Added 99000 / 107030\n",
-                        "Added 99500 / 107030\n",
-                        "Added 100000 / 107030\n",
-                        "Added 100500 / 107030\n",
-                        "Added 101000 / 107030\n",
-                        "Added 101500 / 107030\n",
-                        "Added 102000 / 107030\n",
-                        "Added 102500 / 107030\n",
-                        "Added 103000 / 107030\n",
-                        "Added 103500 / 107030\n",
-                        "Added 104000 / 107030\n",
-                        "Added 104500 / 107030\n",
-                        "Added 105000 / 107030\n",
-                        "Added 105500 / 107030\n",
-                        "Added 106000 / 107030\n",
-                        "Added 106500 / 107030\n",
-                        "Added 107000 / 107030\n",
-                        "Added 107030 / 107030\n",
-                        "✅ All texts stored.\n"
-                    ]
-                }
-            ],
-            "source": [
-                "def store_text(tx, event_id, text):\n",
-                "    tx.run(\n",
-                "        \"\"\"\n",
-                "        MATCH (e:Event {id:$id})\n",
-                "        SET e.text = $text\n",
-                "        \"\"\",\n",
-                "        id=event_id,\n",
-                "        text=text\n",
-                "    )\n",
-                "\n",
-                "def add_event_text():\n",
-                "\n",
-                "    with driver.session() as session:\n",
-                "        records = session.execute_read(fetch_events)\n",
-                "\n",
-                "    print(f\"Found {len(records)} events\")\n",
-                "\n",
-                "    BATCH_SIZE = 500\n",
-                "    \n",
-                "    for i in range(0, len(records), BATCH_SIZE):\n",
-                "\n",
-                "        batch = records[i:i+BATCH_SIZE]\n",
-                "\n",
-                "        texts = [\n",
-                "            build_event_text(dict(r))\n",
-                "            for r in batch\n",
-                "        ]\n",
-                "\n",
-                "        with driver.session() as session:\n",
-                "            for record, text in zip(batch, texts):\n",
-                "                session.execute_write(\n",
-                "                    store_text,\n",
-                "                    record[\"id\"],\n",
-                "                    text\n",
-                "                )\n",
-                "\n",
-                "        print(f\"Added {i + len(batch)} / {len(records)}\")\n",
-                "\n",
-                "    driver.close()\n",
-                "    print(\"✅ All texts stored.\")\n",
-                "\n",
-                "\n",
-                "add_event_text()"
+                "## Hybrid search"
             ]
         },
         {
@@ -994,7 +692,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": ".venv",
+            "display_name": ".venv (3.10.12)",
             "language": "python",
             "name": "python3"
         },
